--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: firebase_pagination
 description: A flutter package to paginate realtime database and firestore with realtime updates.
-version: 1.1.1+2
+version: 1.1.2
 homepage: https://outdatedguy.rocks
 repository: https://github.com/OutdatedGuy/firebase_pagination
 
