--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,11 +1,4 @@
-include: package:very_good_analysis/analysis_options.yaml
+include: package:flutter_lints/flutter.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
-
-linter:
-  rules:
-    directives_ordering: false
-    sort_pub_dependencies: false
-    unawaited_futures: false
-    always_use_package_imports: false
