--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,21 @@
 name: firebase_pagination
-description: A flutter package to paginate realtime database and firestore with realtime updates.
+description: "A flutter package to paginate realtime database and firestore with live updates."
 version: 3.0.1
 homepage: https://outdatedguy.rocks
 repository: https://github.com/OutdatedGuy/firebase_pagination
 
 environment:
-  sdk: ">=2.17.3 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.18.0 <4.0.0'
+  flutter: ">=3.3.0"
 
 dependencies:
+  cloud_firestore: ^4.0.0
+  firebase_database: ^10.0.0
   flutter:
     sdk: flutter
 
-  cloud_firestore: ^4.1.0
-  firebase_database: ^10.0.6
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  very_good_analysis: ^5.1.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
