fix: firebase config file not present in example

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -45,4 +45,4 @@ jobs:
 
       # Statically analyze the Dart code for any errors.
       - name: Analyze project source
-        run: flutter analyze .
+        run: flutter analyze lib
