--- a/example/macos/Podfile
+++ b/example/macos/Podfile
@@ -30,6 +30,11 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # ? To avoid 5 mins of XCode compile time for cloud_firestore
+  pod 'FirebaseFirestore',
+    :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git',
+    :tag => '12.0.0'
+
   flutter_install_all_macos_pods File.dirname(File.realpath(__FILE__))
 end
 
